demo 8: gradient and divergence

--- a/demos/08_pygsp.ipynb
+++ b/demos/08_pygsp.ipynb
@@ -333,9 +333,107 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Smoothness\n",
+    "### 3.1 Gradient and divergence\n",
     "\n",
-    "Is it smooth? Our intuition certainly says no. Let's verify by computing $$\\| \\nabla_\\G \\x \\|_2^2 = \\x^\\intercal \\L \\x = \\sum_{i \\sim j} \\W[i,j] (\\x[i] - \\x[j])^2$$"
+    "The differential operator $\\D \\in \\R^{|\\E| \\times N}$ is defined such as $\\L = \\D^\\intercal \\D$. It can be computed with the PyGSP: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G.compute_differential_operator()\n",
+    "print(G.D.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The gradient of a signal $\\x$ is then given by\n",
+    "$$\\dot\\x = \\nabla_\\G \\, \\x = \\D \\x \\in \\R^{|\\E|}.$$\n",
+    "\n",
+    "Its value on the edge $(i,j) \\in \\E$ is given by\n",
+    "$$\\dot\\x[(i,j)] = \\sqrt{\\W[i,j]} \\, (\\x[i] - \\x[j]).$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_grad = G.D @ x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, the divergence of $\\dot\\x$ is given by\n",
+    "$$\\operatorname{div} \\dot\\x = \\D^\\intercal \\dot\\x = \\D^\\intercal \\D \\x = \\L \\x \\in \\R^N.$$\n",
+    "\n",
+    "It is a graph signal which value at node $i \\in \\V$ is given by\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "(\\operatorname{div} \\dot\\x) [i] &= \\sum_{i \\sim j} \\sqrt{\\W[i,j]} \\, \\dot\\x[(i,j)] \\\\\n",
+    "&= \\sum_{i \\sim j} \\W[i,j] \\, (\\x[i] - \\x[j]) \\\\\n",
+    "&= (\\L \\x)[i].\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Note that the above derivations are for the combinatorial Laplacian. For the normalized Laplacian, replace $\\W$ by $\\D^{-1/2} \\W \\D^{-1/2}$. As its name implies, the normalized Laplacian is simply a normalization of the edge weights."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_div = G.D.T @ x_grad\n",
+    "\n",
+    "np.linalg.norm(G.L @ x - x_div)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G.plot_signal(x_div)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the PyGSP, the gradient and divergence can be computed more efficiently with `G.grad()` and `G.div()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.testing.assert_allclose(x_grad, G.grad(x))\n",
+    "np.testing.assert_allclose(x_div, G.div(x_grad))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Smoothness\n",
+    "\n",
+    "Is our random signal smooth? Our intuition certainly says no. Let's verify by computing the norm of the gradient:\n",
+    "$$\\| \\nabla_\\G \\, \\x \\|_2^2 = \\langle \\D \\x, \\D \\x \\rangle = \\x^\\intercal \\L \\x = \\sum_{i \\sim j} \\W[i,j] (\\x[i] - \\x[j])^2.$$\n",
+    "\n",
+    "Note that we are normalizing by the norm of the signal, so that its energy does not influence our computation."
    ]
   },
   {
@@ -402,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 Exercise\n",
+    "### 3.3 Exercise\n",
     "\n",
     "Find the smoothest non-trivial signal\n",
     "$$\\argmin_{\\x \\in \\R^N} \\x^\\intercal \\L \\x, \\ \\text{ s.t. } \\ \\x \\neq \\mathbf{0} \\ \\text{ and } \\ \\x^\\intercal \\D^{1/2} \\mathbf{1} = 0,$$\n",
@@ -445,13 +543,6 @@
     "\n",
     "print(x.T @ x1)\n",
     "x.T @ G.L @ x / np.linalg.norm(x)**2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.2 Gradient and divergence"
    ]
   },
   {
