demo 8: Fourier and filter wording

--- a/demos/08_pygsp.ipynb
+++ b/demos/08_pygsp.ipynb
@@ -19,9 +19,11 @@
     "\\newcommand{\\I}{\\mathbf{I}}\n",
     "\\renewcommand{\\L}{\\mathbf{L}}\n",
     "\\newcommand{\\U}{\\mathbf{U}}\n",
+    "\\newcommand{\\u}{\\mathbf{u}}\n",
     "\\newcommand{\\G}{\\mathcal{G}}\n",
     "\\newcommand{\\V}{\\mathcal{V}}\n",
     "\\newcommand{\\E}{\\mathcal{E}}\n",
+    "\\newcommand{\\O}{\\mathcal{O}}\n",
     "\\newcommand{\\R}{\\mathbb{R}}\n",
     "\\newcommand{\\g}{\\hat{g}}\n",
     "\\DeclareMathOperator*{\\argmin}{arg\\,min}\n",
@@ -551,9 +553,9 @@
    "source": [
     "## 4 Fourier basis\n",
     "\n",
-    "The PyGSP allows to compute the Fourier basis $\\U$ with the `compute_fourier_basis()` method. Remember that this involves the full eigendecomposition of the Laplacian $\\L = \\U \\mathbf{\\Lambda} \\U^\\intercal$ which costs $\\mathcal{O}(N^3)$ operations in general.\n",
+    "The Fourier basis is defined as $\\U = [\\u_1, \\ldots, \\u_N] \\in \\R^{N \\times N}$, where the columns of $\\U$ are the eigenvectors of the graph Laplacian $\\L$. It can be computed with the PyGSP by the `compute_fourier_basis()` method. Remember that this involves the full eigendecomposition of the Laplacian $\\L = \\U \\mathbf{\\Lambda} \\U^\\intercal$ which costs $\\mathcal{O}(N^3)$ operations in general.\n",
     "\n",
-    "As expected, the Fourier basis of a ring graph is equal to classical Fourier modes:"
+    "As expected, the Fourier basis of a ring graph is equivalent to the classical Fourier modes:"
    ]
   },
   {
@@ -579,7 +581,7 @@
    "source": [
     "### 4.1 Exercise\n",
     "\n",
-    "Plot the first 7 Fourier modes of the grid and a sensor network. What do you observe?\n",
+    "Plot the first 7 Fourier modes, i.e. $\\u_1$ to $\\u_7$, of the grid and a sensor network. What do you observe?\n",
     "\n",
     "**Your answer here.**\n",
     "\n",
@@ -602,12 +604,13 @@
    "source": [
     "### 4.2 Graph Fourier Transform\n",
     "\n",
-    "The graph Fourier transform (GFT) of a signal $\\x$ is given by\n",
-    "$$\\hat{\\x} = \\U^\\intercal \\x,$$\n",
-    "where $U$ is the graph Fourier basis.\n",
+    "The graph Fourier transform (GFT, `G.gft()`) of a signal $\\x$ is given by\n",
+    "$$\\hat\\x = \\mathcal{F}\\{\\x\\} = \\U^\\intercal \\x \\in \\R^N,$$\n",
+    "where $\\U$ is the graph Fourier basis. The reponse at \"frequency\" $\\lambda_i$ is given by\n",
+    "$$\\hat{\\x}[i] = \\langle \\u_i, \\x \\rangle.$$\n",
     "\n",
-    "The inverse Fourier transform is given by\n",
-    "$$\\x = \\U \\hat{\\x}.$$\n",
+    "The inverse Fourier transform (`G.igft()`) is given by\n",
+    "$$\\x = \\mathcal{F}^{-1}\\{\\hat\\x\\} = \\U \\hat\\x \\in \\R^N.$$\n",
     "\n",
     "The intuition about the smoothness of a signal and its representation in the spectral domain again transfers from classical Fourier analysis. Look a the below figures."
    ]
@@ -649,13 +652,25 @@
     "## 5 Filtering\n",
     "\n",
     "A graph signal $\\x$ is filtered as\n",
-    "$$\\y = \\U \\g(\\mathbf{\\Lambda}) \\U^\\intercal \\x = \\g(\\U \\mathbf{\\Lambda} \\U^\\intercal) \\x = \\g(\\L) \\x,$$\n",
-    "where $\\g$ is the filter kernel.\n",
+    "$$\\y = \\U \\g(\\mathbf{\\Lambda}) \\U^\\intercal \\, \\x = \\g(\\U \\mathbf{\\Lambda} \\U^\\intercal) \\, \\x = \\g(\\L) \\, \\x,$$\n",
+    "where $\\g(\\cdot)$ is the filter kernel defined in the specral domain as a function of the eigenvalues (\"frequencies\").\n",
     "\n",
-    "In general, we try to avoid the need to compute the Fourier basis by defining filters as polynomials of the graph Laplacian, i.e.\n",
-    "$$\\g(\\L) = \\sum_{k=0}^K \\theta_k \\L^k.$$\n",
+    "In general, we try to avoid the Fourier basis because of the $\\O(N^3)$ incured cost of the eigendecomposition, to be added to the $\\O(N^2)$ cost of each filtering operation. Defining filters as polynomials of the graph Laplacian, i.e.\n",
+    "$$\\g(\\L) = \\sum_{k=0}^K \\theta_k \\L^k$$\n",
+    "solves this problem as we can compute\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\bar\\x_0 &= \\L^0 \\x = \\x, \\\\\n",
+    "\\bar\\x_1 &= \\L^1 \\x = \\L \\x_0, \\\\\n",
+    "\\bar\\x_2 &= \\L^2 \\x = \\L \\x_1, \\\\\n",
+    "\\bar\\x_k &= \\L^k \\x = \\L \\x_{k-1}.\n",
+    "\\end{align}\n",
+    "$$\n",
+    "The filtered signal is then\n",
+    "$$ \\y = \\hat{g}(\\L) \\, \\x = \\sum_{k=0}^K \\theta_k \\bar\\x_k, $$\n",
+    "for a computational cost of $\\O(K N)$, as $|\\E| \\propto N$ for sparse graphs.\n",
     "\n",
-    "As long as you can specify your filter $\\g(\\cdot)$ as a continuous function of the eigenvalues $\\lambda$, the PyGSP will take care of computing the coefficients of the best approximating [Chebyshev polynomials](https://en.wikipedia.org/wiki/Chebyshev_polynomials)."
+    "As long as you can specify your filter $\\g(\\cdot)$ as a continuous function of the eigenvalues $\\lambda$, the PyGSP will take care of computing the coefficients of the best approximating [Chebyshev polynomials](https://en.wikipedia.org/wiki/Chebyshev_polynomials) or order $K$, then use those to perform the filtering operation."
    ]
   },
   {
@@ -691,6 +706,7 @@
     "    g1.plot(ax=axes[i, 1])\n",
     "    axes[i, 1].set_xlabel('')\n",
     "    axes[i, 1].set_ylabel('')\n",
+    "    axes[i, 1].set_ylim(-0.1, 1.1)\n",
     "    text = r'$\\hat{{g}}(\\lambda) = \\exp \\left( \\frac{{-{{{}}} \\lambda}}{{\\lambda_{{max}}}} \\right)$'.format(tau)\n",
     "    axes[i, 1].text(6, 0.5, text, fontsize=15)\n",
     "    \n",
