--- a/demos/08_pygsp.ipynb
+++ b/demos/08_pygsp.ipynb
@@ -52,6 +52,7 @@
     "%matplotlib inline\n",
     "\n",
     "import numpy as np\n",
+    "from scipy import sparse\n",
     "import matplotlib.pyplot as plt\n",
     "from pygsp import graphs, filters, plotting\n",
     "\n",
@@ -197,10 +198,10 @@
     "\n",
     "fig, axes = plt.subplots(1, 2)\n",
     "\n",
-    "# Your code here.\n",
+    "G.set_coordinates('ring2D')\n",
     "G.plot(ax=axes[0])\n",
     "\n",
-    "# Your code here.\n",
+    "G.set_coordinates('spring')\n",
     "G.plot(ax=axes[1])"
    ]
   },
@@ -541,7 +542,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = # Your code here.\n",
+    "# Solution: the second eigenvector.\n",
+    "x = sparse.linalg.eigsh(G.L, k=2, which='SM')[1][:, 1]\n",
     "\n",
     "print(x.T @ x1)\n",
     "x.T @ G.L @ x / np.linalg.norm(x)**2"
@@ -583,7 +585,7 @@
     "\n",
     "Plot the first 7 Fourier modes, i.e. $\\u_1$ to $\\u_7$, of the grid and a sensor network. What do you observe?\n",
     "\n",
-    "**Your answer here.**\n",
+    "**Your answer here.** The eigenvectors can be localized on non-regularly sampled graphs.\n",
     "\n",
     "Hints:\n",
     "* Use `G = graphs.Grid2d(10, 10)` and `G = graphs.Sensor(seed=42)`."
@@ -595,7 +597,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You code here."
+    "fig, axes = plt.subplots(2, 7)\n",
+    "\n",
+    "G = graphs.Grid2d(10, 10)\n",
+    "G.compute_fourier_basis()\n",
+    "limits = [f(G.U[:, :len(axes[0, :])]) for f in (np.min, np.max)]\n",
+    "for i, ax in enumerate(axes[0, :]):\n",
+    "    G.plot_signal(G.U[:, i], limits=limits, colorbar=False, vertex_size=50, ax=ax)\n",
+    "    ax.set_title('')\n",
+    "    ax.set_axis_off()\n",
+    "fig.subplots_adjust(right=0.8)\n",
+    "cax = fig.add_axes([0.82, 0.56, 0.01, 0.3])\n",
+    "fig.colorbar(ax.collections[0], cax=cax)\n",
+    "\n",
+    "G = graphs.Sensor(seed=42)\n",
+    "G.compute_fourier_basis()\n",
+    "limits = [f(G.U[:, :len(axes[1, :])]) for f in (np.min, np.max)]\n",
+    "for i, ax in enumerate(axes[1, :]):\n",
+    "    G.plot_signal(G.U[:, i], limits=limits, colorbar=False, vertex_size=50, ax=ax)\n",
+    "    ax.set_title('eigenvector $u_{}$'.format(i+1))\n",
+    "    ax.set_axis_off()\n",
+    "fig.subplots_adjust(right=0.8)\n",
+    "cax = fig.add_axes([0.82, 0.16, 0.01, 0.3])\n",
+    "fig.colorbar(ax.collections[0], cax=cax);"
    ]
   },
   {
@@ -760,7 +784,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here."
+    "g.plot()"
    ]
   },
   {
@@ -781,14 +805,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here."
+    "g.plot()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer here.**"
+    "**Your answer here.** The `Itersine` filter bank is a [tight frame](https://en.wikipedia.org/wiki/Frame_%28linear_algebra%29#Tight_frames). It is therefore preserving all the information about $\\x_1$, while the `MexicanHat` filter bank is loosing some. Look at how the sum of all filters, the black line in the above plots, is the identity function for the `Itersine` filter bank."
    ]
   }
  ],
