demo 8: don't number equations

--- a/demos/08_pygsp.ipynb
+++ b/demos/08_pygsp.ipynb
@@ -380,11 +380,11 @@
     "\n",
     "It is a graph signal which value at node $i \\in \\V$ is given by\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "(\\operatorname{div} \\dot\\x) [i] &= \\sum_{i \\sim j} \\sqrt{\\W[i,j]} \\, \\dot\\x[(i,j)] \\\\\n",
     "&= \\sum_{i \\sim j} \\W[i,j] \\, (\\x[i] - \\x[j]) \\\\\n",
     "&= (\\L \\x)[i].\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "Note that the above derivations are for the combinatorial Laplacian. For the normalized Laplacian, replace $\\W$ by $\\D^{-1/2} \\W \\D^{-1/2}$. As its name implies, the normalized Laplacian is simply a normalization of the edge weights."
@@ -683,12 +683,12 @@
     "$$\\g(\\L) = \\sum_{k=0}^K \\theta_k \\L^k$$\n",
     "solves this problem as we can compute\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\bar\\x_0 &= \\L^0 \\x = \\x, \\\\\n",
     "\\bar\\x_1 &= \\L^1 \\x = \\L \\x_0, \\\\\n",
     "\\bar\\x_2 &= \\L^2 \\x = \\L \\x_1, \\\\\n",
     "\\bar\\x_k &= \\L^k \\x = \\L \\x_{k-1}.\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "The filtered signal is then\n",
     "$$ \\y = \\hat{g}(\\L) \\, \\x = \\sum_{k=0}^K \\theta_k \\bar\\x_k, $$\n",
