--- a/assignments/04_graph_signal_processing.ipynb
+++ b/assignments/04_graph_signal_processing.ipynb
@@ -367,7 +367,7 @@
     "np.testing.assert_equal(abs(x_pred), 1)\n",
     "\n",
     "# Error rate.\n",
-    "err = np.sum(np.abs(x - x_pred))\n",
+    "err = np.count_nonzero(x - x_pred)\n",
     "print('{} errors ({:.2%})'.format(err, err/G.N))"
    ]
   },
@@ -411,7 +411,7 @@
     "\n",
     "for p in [0.1, 0.3, 0.5, 0.7, 0.9]:\n",
     "    # Your code here.\n",
-    "    print('{}: {:6.2%}'.format(p, err))"
+    "    print('{}: {:6.2%}'.format(p, err/G.N))"
    ]
   },
   {
