assignment 4: don't count errors twice

--- a/assignments/04_graph_signal_processing.ipynb
+++ b/assignments/04_graph_signal_processing.ipynb
@@ -397,7 +397,7 @@
     "np.testing.assert_equal(abs(x_pred), 1)\n",
     "\n",
     "# Error rate.\n",
-    "err = np.sum(np.abs(x - x_pred))\n",
+    "err = np.count_nonzero(x - x_pred)\n",
     "print('{} errors ({:.2%})'.format(err, err/G.N))"
    ]
   },
@@ -442,8 +442,8 @@
     "for p in [0.1, 0.3, 0.5, 0.7, 0.9]:\n",
     "    y = prepare_observations(p)\n",
     "    x_pred, _ = solve(y, alpha)\n",
-    "    err = np.sum(np.abs(x - x_pred)) / G.N\n",
-    "    print('{}: {:6.2%}'.format(p, err))"
+    "    err = np.count_nonzero(x - x_pred)\n",
+    "    print('{}: {:6.2%}'.format(p, err/G.N))"
    ]
   },
   {
