demo 8: pygsp can be installed with pip or conda

--- a/demos/08_pygsp.ipynb
+++ b/demos/08_pygsp.ipynb
@@ -31,7 +31,7 @@
     "$\n",
     "as a set of nodes $\\V$, a set of edges $\\E$ and a weighted adjacency matrix $\\W \\in \\R^{N \\times N}$, $N = |\\V|$.\n",
     "\n",
-    "You will first need to install it with:"
+    "You will first need to install it with `pip` or `conda`:"
    ]
   },
   {
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install pygsp"
+    "# !pip install pygsp\n",
+    "# !conda install -c conda-forge pygsp"
    ]
   },
   {
