assignment 4: pygsp much simpler to install

--- a/assignments/04_solution.ipynb
+++ b/assignments/04_solution.ipynb
@@ -34,12 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you get an import error about the PyGSP, install it with `pip install pygsp`.\n",
-    "\n",
-    "* If you get a premission error, try `pip install --user pygsp`.\n",
-    "* You can safely ignore any FLANN or Qt warning.\n",
-    "* Some Windows users needed to install VC++14. Follow the instructions in the installation error if that's the case.\n",
-    "* As an alternative, you can use the cloud environment provided by binder. Click on the binder badge on the [GitHub repository](https://github.com/mdeff/ntds_2017)."
+    "If you get an import error about the PyGSP, install it with `pip install pygsp` or `conda install -c conda-forge pygsp`."
    ]
   },
   {
