demo 8: smoothness of eigenvectors

--- a/demos/08_pygsp.ipynb
+++ b/demos/08_pygsp.ipynb
@@ -507,7 +507,7 @@
     "### 3.3 Exercise\n",
     "\n",
     "Find the smoothest non-trivial signal\n",
-    "$$\\argmin_{\\x \\in \\R^N} \\x^\\intercal \\L \\x, \\ \\text{ s.t. } \\ \\x \\neq \\mathbf{0} \\ \\text{ and } \\ \\x^\\intercal \\D^{1/2} \\mathbf{1} = 0,$$\n",
+    "$$\\x^\\star = \\argmin_{\\x \\in \\R^N} \\x^\\intercal \\L \\x, \\ \\text{ s.t. } \\ \\x \\neq \\mathbf{0} \\ \\text{ and } \\ \\x^\\intercal \\D^{1/2} \\mathbf{1} = 0,$$\n",
     "where $\\mathbf{0}$ denotes the vector of all zeroes, and $\\mathbf{1}$ the vector of all ones. The first constraint prevents the solution to be the zero vector, while the second constraint forces it to be orthogonal to the first eigenvector. The first eigenvector is $\\frac{1}{N} \\mathbf{1}$ for the combinatorial Laplacian and $\\D^{1/2} \\mathbf{1}$ for the normalized Laplacian."
    ]
   },
@@ -576,6 +576,29 @@
     "G.set_coordinates('line1D')\n",
     "G.plot_signal(G.U[:, 1:4], ax=axes[1])\n",
     "axes[1].legend(['u_{}'.format(i) for i in range(1, 4)]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the eigenvalue equation, we can write\n",
+    "$$\\L \\u_n = \\lambda_n \\u_n \\ \\Leftrightarrow \\ \\u_n^\\intercal \\L \\u_n = \\lambda_n.$$\n",
+    "Hence, the eigenvalues are a measure of smoothness, or frequency, of the eigenvectors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_eigenvalue(n):\n",
+    "    u = G.U[:, n]\n",
+    "    print('u_{0}^T L u_{0} = {1:.4f} (eigenvalue {2:.4f})'.format(n, u.T @ G.L @ u, G.e[n]))\n",
+    "\n",
+    "for n in range(6):\n",
+    "    print_eigenvalue(n)"
    ]
   },
   {
