demo 8: be sure to install in correct virtual env

--- a/demos/08_pygsp.ipynb
+++ b/demos/08_pygsp.ipynb
@@ -31,7 +31,7 @@
     "$\n",
     "as a set of nodes $\\V$, a set of edges $\\E$ and a weighted adjacency matrix $\\W \\in \\R^{N \\times N}$, $N = |\\V|$.\n",
     "\n",
-    "You will first need to install it with `pip` or `conda`:"
+    "You will first need to install it with `pip` or `conda`. The below code makes sure that you are installing it [in the environment in which your IPython kernel is running](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/index.html)."
    ]
   },
   {
@@ -40,8 +40,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install pygsp\n",
-    "# !conda install -c conda-forge pygsp"
+    "# import sys\n",
+    "\n",
+    "# conda\n",
+    "# !conda install --yes --prefix {sys.prefix} -c conda-forge pygsp\n",
+    "\n",
+    "# pip\n",
+    "# !{sys.executable} -m pip install pygsp"
    ]
   },
   {
