--- a/assignments/01_solution_florian.ipynb
+++ b/assignments/01_solution_florian.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTDS assignment 1: Student Solution\n",
+    "# [NTDS'17] assignment 1: Student Solution\n",
+    "[ntds'17]: https://github.com/mdeff/ntds_2017\n",
+    "\n",
     "Florian Benedikt Roth"
    ]
   },
