--- a/assignments/03_spectral_graph_theory.ipynb
+++ b/assignments/03_spectral_graph_theory.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTDS assignment 3: spectral graph theory\n",
-    "[Michaël Defferrard](http://deff.ch), *PhD student*, [EPFL LTS2](http://lts2.epfl.ch)"
+    "# [NTDS'17] assignment 3: spectral graph theory\n",
+    "[ntds'17]: https://github.com/mdeff/ntds_2017\n",
+    "\n",
+    "[Michaël Defferrard](http://deff.ch), [EPFL LTS2](http://lts2.epfl.ch)"
    ]
   },
   {
