--- a/assignments/04_graph_signal_processing.ipynb
+++ b/assignments/04_graph_signal_processing.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTDS assignment 4: graph signal processing\n",
-    "[Michaël Defferrard](http://deff.ch), *PhD student*, [EPFL LTS2](http://lts2.epfl.ch)\n",
+    "# [NTDS'17] assignment 4: graph signal processing\n",
+    "[ntds'17]: https://github.com/mdeff/ntds_2017\n",
+    "\n",
+    "[Michaël Defferrard](http://deff.ch), [EPFL LTS2](http://lts2.epfl.ch)\n",
     "\n",
     "In this assignment we'll use the [PyGSP](https://github.com/epfl-lts2/pygsp) to do some Graph Signal Processing (GSP). This fourth assignement is shorter than the last one in order to let you focus on your projects."
    ]
