--- a/demos/02_data_acquisition_twitter.ipynb
+++ b/demos/02_data_acquisition_twitter.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTDS demo 2: Twitter data aquisition\n",
+    "# [NTDS'17] demo 2: Twitter data aquisition\n",
+    "[ntds'17]: https://github.com/mdeff/ntds_2017\n",
+    "\n",
     "Michael Defferrard and Effrosyni Simou"
    ]
   },
