--- a/demos/03_numpy.ipynb
+++ b/demos/03_numpy.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTDS demo 3: Numpy\n",
-    "Hermina Petric Maretic, *PhD student*, [EPFL](http://epfl.ch) [LTS4](http://lts4.epfl.ch)"
+    "# [NTDS'17] demo 3: Numpy\n",
+    "[ntds'17]: https://github.com/mdeff/ntds_2017\n",
+    "\n",
+    "Hermina Petric Maretic, [EPFL LTS4](http://lts4.epfl.ch)"
    ]
   },
   {
