--- a/demos/05_matplotlib.ipynb
+++ b/demos/05_matplotlib.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTDS demo 5: Plotting with Matplotlib\n",
-    "[Effrosyni Simou](http://lts4.epfl.ch/simou), *PhD Student*, [EPFL](http://epfl.ch) [LTS4](http://lts4.epfl.ch)"
+    "# [NTDS'17] demo 5: Plotting with Matplotlib\n",
+    "[ntds'17]: https://github.com/mdeff/ntds_2017\n",
+    "\n",
+    "[Effrosyni Simou](http://lts4.epfl.ch/simou), [EPFL LTS4](http://lts4.epfl.ch)"
    ]
   },
   {
