--- a/demos/06_webapi_pandas.ipynb
+++ b/demos/06_webapi_pandas.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTDS demo 6: web APIs & data analysis with pandas\n",
-    "[Michaël Defferrard](http://deff.ch), *PhD student*, [EPFL](http://epfl.ch) [LTS2](http://lts2.epfl.ch)"
+    "# [NTDS'17] demo 6: web APIs & data analysis with pandas\n",
+    "[ntds'17]: https://github.com/mdeff/ntds_2017\n",
+    "\n",
+    "[Michaël Defferrard](http://deff.ch), [EPFL LTS2](http://lts2.epfl.ch)"
    ]
   },
   {
