--- a/demos/07_data_exploration_and_visualisation.ipynb
+++ b/demos/07_data_exploration_and_visualisation.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTDS demo 7: data exploration and visualisation\n",
+    "# [NTDS'17] demo 7: data exploration and visualisation\n",
+    "[ntds'17]: https://github.com/mdeff/ntds_2017\n",
     "\n",
     "Michael Defferrard and Hermina Petric Maretic, based on [exercises from the 2016 edition of NTDS](https://github.com/mdeff/ntds_2016)."
    ]
