--- a/assignments/01_solution_ersi.ipynb
+++ b/assignments/01_solution_ersi.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTDS assignment 1: Solution\n",
-    "[Effrosyni Simou](http://lts4.epfl.ch/simou), *PhD Student*, [EPFL](http://epfl.ch) [LTS4](http://lts4.epfl.ch)"
+    "# [NTDS'17] assignment 1: Solution\n",
+    "[ntds'17]: https://github.com/mdeff/ntds_2017\n",
+    "\n",
+    "[Effrosyni Simou](http://lts4.epfl.ch/simou), [EPFL LTS4](http://lts4.epfl.ch)"
    ]
   },
   {
@@ -669,5 +671,5 @@
  ],
  "metadata": {},
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
