demo 8: better flow

--- a/demos/08_pygsp.ipynb
+++ b/demos/08_pygsp.ipynb
@@ -12,27 +12,6 @@
     "For this tutorial, we'll use the [PyGSP](https://github.com/epfl-lts2/pygsp), a Python package to ease signal processing on graphs.\n",
     "The PyGSP facilitates a wide variety of operations on graphs, like computing their Fourier basis, filtering or interpolating signals, plotting graphs, signals, and filters. The package includes a wide range of graphs and many filter banks. Despite all the pre-defined models, you can easily use a custom graph by defining its adjacency matrix, and a custom filter bank by defining a set of functions in the spectral domain.\n",
     "\n",
-    "For this tutorial we'll define a graph\n",
-    "$\n",
-    "\\newcommand{\\x}{\\mathbf{x}}\n",
-    "\\newcommand{\\y}{\\mathbf{y}}\n",
-    "\\newcommand{\\W}{\\mathbf{W}}\n",
-    "\\newcommand{\\D}{\\mathbf{D}}\n",
-    "\\newcommand{\\I}{\\mathbf{I}}\n",
-    "\\renewcommand{\\L}{\\mathbf{L}}\n",
-    "\\newcommand{\\U}{\\mathbf{U}}\n",
-    "\\newcommand{\\u}{\\mathbf{u}}\n",
-    "\\newcommand{\\G}{\\mathcal{G}}\n",
-    "\\newcommand{\\V}{\\mathcal{V}}\n",
-    "\\newcommand{\\E}{\\mathcal{E}}\n",
-    "\\newcommand{\\O}{\\mathcal{O}}\n",
-    "\\newcommand{\\R}{\\mathbb{R}}\n",
-    "\\newcommand{\\g}{\\hat{g}}\n",
-    "\\DeclareMathOperator*{\\argmin}{arg\\,min}\n",
-    "\\G = (\\V, \\E, \\W)\n",
-    "$\n",
-    "as a set of nodes $\\V$, a set of edges $\\E$ and a weighted adjacency matrix $\\W \\in \\R^{N \\times N}$, $N = |\\V|$.\n",
-    "\n",
     "You will first need to install it with `pip` or `conda`. The below code makes sure that you are installing it [in the environment in which your IPython kernel is running](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/index.html)."
    ]
   },
@@ -72,13 +51,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 Graphs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 1 Graphs\n",
+    "\n",
+    "For this tutorial we'll define a graph\n",
+    "$\n",
+    "\\newcommand{\\x}{\\mathbf{x}}\n",
+    "\\newcommand{\\y}{\\mathbf{y}}\n",
+    "\\newcommand{\\W}{\\mathbf{W}}\n",
+    "\\newcommand{\\D}{\\mathbf{D}}\n",
+    "\\newcommand{\\I}{\\mathbf{I}}\n",
+    "\\renewcommand{\\L}{\\mathbf{L}}\n",
+    "\\newcommand{\\U}{\\mathbf{U}}\n",
+    "\\newcommand{\\u}{\\mathbf{u}}\n",
+    "\\newcommand{\\G}{\\mathcal{G}}\n",
+    "\\newcommand{\\V}{\\mathcal{V}}\n",
+    "\\newcommand{\\E}{\\mathcal{E}}\n",
+    "\\newcommand{\\O}{\\mathcal{O}}\n",
+    "\\newcommand{\\R}{\\mathbb{R}}\n",
+    "\\newcommand{\\g}{\\hat{g}}\n",
+    "\\DeclareMathOperator*{\\argmin}{arg\\,min}\n",
+    "\\G = (\\V, \\E, \\W)\n",
+    "$\n",
+    "as a set of nodes $\\V$, a set of edges $\\E$ and a weighted adjacency matrix $\\W \\in \\R^{N \\times N}$, $N = |\\V|$.\n",
+    "\n",
     "Graphs are created with the [graphs module](https://pygsp.readthedocs.io/en/stable/reference/graphs.html). It includes a wide range of graphs, from point clouds like the Stanford bunny and the Swiss roll; to networks like the Minnesota road network; to models for generating random graphs like stochastic block models, sensor networks, Erdős–Rényi model, Barabási-Albert model; to simple graphs like the path, the ring, and the grid."
    ]
   },
