move all slides together

--- a/slides/ntds_labs.tex
+++ b/slides/ntds_labs.tex
@@ -2,7 +2,7 @@
 \usepackage[T1]{fontenc} \usepackage{lmodern} \usepackage[utf8]{inputenc}
 \usepackage[english]{babel} \usepackage{booktabs}
 \usepackage{graphicx,subcaption} \usepackage{amssymb,amsmath}
-\graphicspath{{img/}}
+\graphicspath{{figures/}}
 \usepackage[citestyle=authoryear,bibstyle=authoryear,backend=biber,url=false,doi=false,isbn=false]{biblatex} \bibliography{refs}
 \usepackage{hyperref}
 
