--- a/assignments/04_graph_signal_processing.ipynb
+++ b/assignments/04_graph_signal_processing.ipynb
@@ -316,7 +316,23 @@
     "\n",
     "In this problem, we'll consider having the labels for some percentage of our $N=2000$, but missing those of the other half. Those of you who have done some [Machine Learning (ML)](https://en.wikipedia.org/wiki/Machine_learning) will surely recognize here a [supervised learning](https://en.wikipedia.org/wiki/Supervised_learning) problem and will say: yeah, let's train a classifier on the training data, and predict the missing labels! While they would not be wrong in doing so, they would not use the unlabeled data at all for training. The setup where test cases are known a-priori is called [transductive learning](https://en.wikipedia.org/wiki/Transduction_%28machine_learning%29). So let's exploit the structure of the data domain with similarity graph!\n",
     "\n",
-    "Define $\\mathbf{y} \\in \\{-1,1\\}^n, n < N,$ as the subset of known labels (the musical genres) and $M$ as a masking matrix indicating the observations, with $\\operatorname{diag}(M) \\in \\{0,1\\}^N$."
+    "Define $\\mathbf{y} \\in \\mathbb{R}^N$ such as\n",
+    "$$\\mathbf{y}[i] =\n",
+    "\\begin{cases}\n",
+    "    1 &\\text{if the genre of track } i \\text{ is Rock}, \\\\\n",
+    "    -1 &\\text{if the genre of track } i \\text{ is Hip-Hop}, \\\\\n",
+    "    0 &\\text{if the genre of track } i \\text{ is unknown}, \\\\\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "and the diagonal masking matrix $\\mathbf{M} \\in \\mathbb{R}^{N \\times N}$, which indicates the observations, such as\n",
+    "\n",
+    "$$\\mathbf{M}[i,i] =\n",
+    "\\begin{cases}\n",
+    "    1 &\\text{if the genre of track } i \\text{ is known}, \\\\\n",
+    "    0 &\\text{if the genre of track } i \\text{ is unknown}. \\\\\n",
+    "\\end{cases}\n",
+    "$$"
    ]
   },
   {
@@ -352,9 +368,12 @@
     "\n",
     "**Your answer here.**\n",
     "The optimal solution (by putting the derivative to zero) is given by:\n",
-    "$$\\mathbf{Mx}^\\ast - \\mathbf{y} + \\alpha \\mathbf{L x}^\\ast = 0\n",
-    "\\hspace{0.3cm} \\rightarrow \\hspace{0.3cm}\n",
-    "x^\\ast = (\\mathbf{M} + \\alpha \\mathbf{L})^{-1} \\mathbf{y}$$\n",
+    "$$\\begin{align}\n",
+    "2 \\mathbf{M}^\\intercal (\\mathbf{Mx}^\\ast - \\mathbf{y}) + \\alpha (\\mathbf{L x}^\\ast + \\mathbf{L}^\\intercal \\mathbf{x}^\\ast) &= 0 \\\\\n",
+    "\\mathbf{Mx}^\\ast - \\mathbf{My} + \\alpha \\mathbf{L x}^\\ast &= 0 \\\\\n",
+    "\\mathbf{x}^\\ast &= (\\mathbf{M} + \\alpha \\mathbf{L})^{-1} \\mathbf{y}\n",
+    "\\end{align}$$\n",
+    "Note that $\\mathbf{My} = \\mathbf{y}$ by definition of $\\mathbf{y}$ and $\\mathbf{M}$.\n",
     "\n",
     "Implement it below.\n",
     "\n",
