assignment 3: figsize was not taken into account

--- a/assignments/03_solution.ipynb
+++ b/assignments/03_solution.ipynb
@@ -31,8 +31,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import configparser\n",
     "import os\n",
     "\n",
@@ -46,8 +53,15 @@
     "import scipy.sparse.linalg\n",
     "from sklearn import preprocessing, decomposition\n",
     "import librosa\n",
-    "import IPython.display as ipd\n",
-    "\n",
+    "import IPython.display as ipd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.rcParams['figure.figsize'] = (17, 5)"
    ]
   },
