--- a/assignments/02_solution.ipynb
+++ b/assignments/02_solution.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTDS assignment 2: network models\n",
-    "[Hermina Petric Maretic](https://people.epfl.ch/hermina.petricmaretic), *PhD student*, [EPFL](http://epfl.ch) [LTS4](http://lts4.epfl.ch)"
+    "# [NTDS'17] assignment 2: network models\n",
+    "[ntds'17]: https://github.com/mdeff/ntds_2017\n",
+    "\n",
+    "[Hermina Petric Maretic](https://people.epfl.ch/hermina.petricmaretic), [EPFL LTS4](http://lts4.epfl.ch)"
    ]
   },
   {
