assignment 4: uniform titles

--- a/assignments/04_feedback.ipynb
+++ b/assignments/04_feedback.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTDS assignment 4: feedback\n",
+    "# [NTDS'17] assignment 4: feedback\n",
+    "[ntds'17]: https://github.com/mdeff/ntds_2017\n",
+    "\n",
     "[Michaël Defferrard](http://deff.ch), [Effrosyni Simou](https://lts4.epfl.ch/simou), [Hermina Petric Maretić](https://people.epfl.ch/hermina.petricmaretic), EPFL [LTS2](https://lts2.epfl.ch) & [LTS4](https://lts4.epfl.ch)"
    ]
   },
@@ -13,8 +15,6 @@
    "metadata": {},
    "source": [
     "The following grading scheme was followed for the correction of the fourth assignment, on a total of 100 points.\n",
-    "\n",
-    "You'll find some comments and common mistakes below each task.\n",
     "\n",
     "### 1 Compute the Laplacian with the PyGSP (5 points)\n",
     "### 2 Fourier from combinatorial or normalized Laplacian (5 points)\n",
