assignment 4: figsize was not taken into account

--- a/assignments/04_solution.ipynb
+++ b/assignments/04_solution.ipynb
@@ -18,14 +18,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "from scipy import sparse, spatial\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from pygsp import graphs, filters, plotting\n",
-    "\n",
+    "from pygsp import graphs, filters, plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.rcParams['figure.figsize'] = (17, 5)\n",
     "plotting.BACKEND = 'matplotlib'"
    ]
