--- a/assignments/04_solution.ipynb
+++ b/assignments/04_solution.ipynb
@@ -161,7 +161,7 @@
    "source": [
     "From the above plot, can you infer if the Fourier basis was computed from a combinatorial or normalized Laplacian?\n",
     "\n",
-    "**Your answer here.** If the largest eigenvalue is larger than 2, then it was computed from a combinatorial Laplacian. If it's smaller than 2, then is probably a normalized Laplacian. But we cannot be sure."
+    "**Your answer here.** If the largest eigenvalue is larger than 2, then we know for sure it was computed from a combinatorial Laplacian. If it's smaller than 2, then it is probably a normalized Laplacian, but we cannot be sure."
    ]
   },
   {
@@ -325,7 +325,7 @@
    "source": [
     "## 6 Transductive learning\n",
     "\n",
-    "In this problem, we'll consider having the labels for some percentage of our $N=2000$, but missing those of the other half. Those of you who have done some [Machine Learning (ML)](https://en.wikipedia.org/wiki/Machine_learning) will surely recognize here a [supervised learning](https://en.wikipedia.org/wiki/Supervised_learning) problem and will say: yeah, let's train a classifier on the training data, and predict the missing labels! While they would not be wrong in doing so, they would not use the unlabeled data at all for training. The setup where test cases are known a-priori is called [transductive learning](https://en.wikipedia.org/wiki/Transduction_%28machine_learning%29). So let's exploit the structure of the data domain with similarity graph!\n",
+    "In this problem, we'll consider having the labels for some percentage of our $N=2000$, but missing the rest. Those of you who have done some [Machine Learning (ML)](https://en.wikipedia.org/wiki/Machine_learning) will surely recognize here a [supervised learning](https://en.wikipedia.org/wiki/Supervised_learning) problem and will say: yeah, let's train a classifier on the training data, and predict the missing labels! While they would not be wrong in doing so, they would not use the unlabeled data at all for training. The setup where test cases are known a-priori is called [transductive learning](https://en.wikipedia.org/wiki/Transduction_%28machine_learning%29). So let's exploit the structure of the data domain with a similarity graph!\n",
     "\n",
     "Define $\\mathbf{y} \\in \\mathbb{R}^N$ such as\n",
     "$$\\mathbf{y}[i] =\n",
